logの扱いで自動生成クラスを使うように移行 (e.g. LogResult) #498
